add the book layout

--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -7,7 +7,9 @@
     <div id="wrapper">
       {% include header.html %}
       <section class="content clearfix">
-        {{ content }}
+        <div class="book-wrapper clearfix">
+          {{ content }}
+        </div>
       </section>
       {% include footer.html %}
     </div>
