--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    {% include head.html %}
+    <meta charset='utf-8'>
+    <title>{{ page.title }}</title>
+    <link rel="stylesheet" href="{{ "../../css/book.css" | prepend: site.baseurl }}">
+    <link rel="shortcut icon" href="/favicon.png">
   </head>
   <body>
     <div id="wrapper">
