--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -11,7 +11,9 @@
       {% include header.html %}
       <section class="content clearfix">
         <div class="book-wrapper clearfix">
-          {{ content }}
+          <div class="chapter-contents">
+            {{ content }}
+          </div>
         </div>
       </section>
       {% include footer.html %}
