--- a/css/book.css
+++ b/css/book.css
@@ -151,3 +151,16 @@ body {
   width: 1000px;
   margin: 40px auto;
 }
+.chapter-contents {
+  float: left;
+  width: 700px;
+  margin-left: 40px;
+  font-family: "ProximaNova", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 300;
+  letter-spacing: 0.3px;
+  line-height: 36px;
+  font-size: 20px;
+}
+.book-wrapper img {
+  width: 700px;
+}
