--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -9,8 +9,8 @@
   <body>
     <div id="wrapper">
       {% include header.html %}
-      <section class="content clearfix">
-        <div class="book-wrapper clearfix">
+      <section class="content details">
+        <div class="book-wrapper">
           <div class="chapter-contents">
             {{ content }}
           </div>
