--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset='utf-8'>
     <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="{{ "../../css/book.css" | prepend: site.baseurl }}">
+    <link rel="stylesheet" href="{{ "../../css/book.css" }}">
+    <link rel="stylesheet" href="{{ "../../css/highlight.css" }}">
     <link rel="shortcut icon" href="/favicon.png">
   </head>
   <body>
