--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -1,11 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset='utf-8'>
-    <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="{{ "../../css/book.css" }}">
-    <link rel="stylesheet" href="{{ "../../css/highlight.css" }}">
-    <link rel="shortcut icon" href="/favicon.png">
+    {% include head.html %}
   </head>
   <body>
     <div id="wrapper">
