--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header id="header">
   <div class="top-bg">
     <div class="wrapper-inside clearfix">
-      <h1 id="logo"></h1>
+      <h2 class="home"><a href="http://happypeter.github.io/tealeaf-http">Home</a></h2>
     </div>
   </div>
 </header>
