modify the style of book cover

--- a/_layouts/book.html
+++ b/_layouts/book.html
@@ -4,9 +4,9 @@
     {% include head.html %}
   </head>
   <body>
-    <div id="wrapper">
+    <div id="wrapper" class="book-content">
       {% include header.html %}
-      <section class="content details">
+      <section class="content">
         <div class="book-wrapper">
           <div class="chapter-contents">
             {{ content }}
