add hover effect to links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,7 +3,7 @@
     <div class="wrapper-inside clearfix">
       <h2 class="home">
         <a href="http://happypeter.github.io/tealeaf-http">
-          Http 下午茶
+          HTTP 下午茶
         </a>
       </h2>
     </div>
