--- a/_sass/_book.scss
+++ b/_sass/_book.scss
@@ -343,3 +343,18 @@ table>thead>tr>th:first-child {
 table>thead>tr>th:last-child {
   width: 450px;
 }
+
+blockquote {
+  background-color: #FCF8E3;
+  border-color: #FAEBCC;
+  color: #8A6D3B;
+  padding: 15px 30px;
+  margin: 0;
+  margin-bottom: 20px;
+  border: 1px solid rgba(0, 0, 0, 0);
+  border-radius: 4px;
+  h4 {
+    text-align: center;
+    margin: 0;
+  }
+}
