--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,7 @@
       {% include header.html %}
       <section class="content clearfix">
         {{ content }}
+        {% include contributors.html %}
       </section>
       {% include footer.html %}
     </div>
