--- a/_includes/contributors.html
+++ b/_includes/contributors.html
@@ -1,17 +1,62 @@
-<div class="divider contribute">
-  <p>书稿贡献者名单</p>
+<div class="divider name-list">
+  <a href="https://github.com/happypeter/tealeaf-http/graphs/contributors">GitHub 书稿贡献者</a>
 </div>
 <div class="contributors">
-  <div class="row">
+  <div class="row clearfix">
     <div class="name-card contributor">
-      <img src="images/kevin.png" alt="kevin">
+      <img src="images/cifer-y.jpeg" alt="cifer-y">
       <div class="text">
         <div class="name">
-         Kevin Wang
+        Cifer-Y
         </div>
-        <div class="job-title"><a href="http://www.gotealeaf.com/">茶叶学院联合创始人</a></div>
-        感谢 @happypeter 和 Ruby China 社区的中文翻译工作， 希望能对学习 web 开发的新手有所帮助。
+        <div class="job-title"><a href="https://github.com/Cifer-Y">开源贡献者</a></div>
+        承担了本书第一稿的全部翻译工作
+      </div>
+    </div>
+    <div class="name-card contributor">
+      <img src="images/happypeter.jpeg" alt="happypeter">
+      <div class="text">
+        <div class="name">
+        happypeter
+        </div>
+        <div class="job-title"><a href="http://happycasts.net">happycasts 创始人</a></div>
+        逐字逐句校正了全书各个章节
+      </div>
+    </div>
+    <div class="name-card contributor">
+      <img src="images/billie66.png" alt="billie66">
+      <div class="text">
+        <div class="name">
+        billie66
+        </div>
+        <div class="job-title"><a href="http://haoqicat.com">好奇猫共同创始人</a></div>
+        维护本网页及其电子书
       </div>
     </div>
   </div>
+  <div class="row clearfix">
+    <div class="name-card contributor">
+      <img src="images/mainframer.png" alt="mainframer">
+      <div class="text">
+        <div class="name">
+          mainframer
+        </div>
+        <div class="job-title"><a href="https://github.com/mainframer">IBM 中国</a></div>
+        参与本书校对工作
+      </div>
+    </div>
+    <div class="name-card contributor">
+      <img src="images/juanitofatas.jpeg" alt="juanitofatas">
+      <div class="text">
+        <div class="name">
+        Junaito Fatas
+        </div>
+        <div class="job-title"><a href="https://github.com/JuanitoFatas">台湾 Ruby 社区大牛</a></div>
+        参与本书校对工作
+      </div>
+    </div>
+  </div>
+  <p class="center">
+    翻译过程中的难点也咨询了英文原书作者，在此表示感谢！
+  </p>
 </div>
