--- a/_includes/contributors.html
+++ b/_includes/contributors.html
@@ -55,6 +55,16 @@
         参与本书校对工作
       </div>
     </div>
+    <div class="name-card contributor">
+      <img src="images/ruchee.jpeg" alt="ruchee">
+      <div class="text">
+        <div class="name">
+        Ruchee
+        </div>
+        <div class="job-title"><a href="https://github.com/ruchee">开源贡献者</a></div>
+        参与本书校对工作
+      </div>
+    </div>
   </div>
   <p class="center">
     翻译过程中的难点也咨询了英文原书作者，在此表示感谢！
