--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,9 @@
 <header id="header">
   <div class="top-bg">
     <div class="wrapper-inside clearfix">
+      <h1 id="logo">
+        <a href="http://www.gotealeaf.com/"></a>
+      </h1>
       <h2 class="home">
         <a href="http://happypeter.github.io/tealeaf-http">
           HTTP 下午茶
