--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,7 +5,7 @@
         <a href="http://www.gotealeaf.com/"></a>
       </h1>
       <h2 class="home">
-        <a href="http://happypeter.github.io/tealeaf-http">
+        <a href="/">
           HTTP 下午茶
         </a>
       </h2>
